--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^1.1.3",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "swig": "^1.4.2"
   }
 }
