--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^1.1.3",
     "express": "^4.13.4",
     "lodash": "^4.11.1",
+    "morgan": "^1.7.0",
     "swig": "^1.4.2"
   }
 }
