--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "chalk": "^1.1.3",
     "express": "^4.13.4",
     "lodash": "^4.11.1",
